; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_item_free_data.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_item_free_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext4_xattr_item = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ext4_xattr_item*)* @ext4_xattr_item_free_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ext4_xattr_item_free_data(%struct.ext4_xattr_item* %0) #0 {
  %2 = alloca %struct.ext4_xattr_item*, align 8
  store %struct.ext4_xattr_item* %0, %struct.ext4_xattr_item** %2, align 8
  %3 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %2, align 8
  %4 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @ASSERT(i32* %5)
  %7 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %2, align 8
  %8 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %7, i32 0, i32 1
  %9 = load i32*, i32** %8, align 8
  %10 = call i32 @kfree(i32* %9)
  %11 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %2, align 8
  %12 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %11, i32 0, i32 1
  store i32* null, i32** %12, align 8
  %13 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %2, align 8
  %14 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %13, i32 0, i32 0
  store i64 0, i64* %14, align 8
  ret void
}

declare dso_local i32 @ASSERT(i32*) #1

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
